# foxy

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  Makefile.toml  README.md  TODO.md  rustc-ice-2024-01-19T14_26_24-71100.txt  rustfmt.toml
.cargo/: config.toml
assets/: dummy.txt
crates/eztracing/: Cargo.toml  README.md
crates/eztracing/src/: builder.rs  format.rs  init.rs  level.rs  lib.rs  prelude.rs
crates/ezwin/: Cargo.toml
crates/ezwin/src/: debug.rs  lib.rs  prelude.rs  window.rs
crates/ezwin/src/debug/: error.rs  validation.rs
crates/ezwin/src/window/: builder.rs  input.rs  message.rs  procs.rs  state.rs
crates/ezwin/src/window/input/: button.rs  keyboard.rs  modifier.rs  mouse.rs
crates/foxy/: Cargo.toml
crates/foxy/examples/: simple.rs
crates/foxy/examples/renderer/: main.rs
crates/foxy/examples/voxel_game/: main.rs
crates/foxy/src/: camera.rs  core.rs  lib.rs  prelude.rs  window.rs
crates/foxy/src/core/: app.rs  builder.rs  engine.rs  engine_loop.rs  engine_state.rs  event.rs  foxy_loop.rs  foxy_state.rs  framework.rs  input.rs  lifecycle.rs  message.rs  render_loop.rs  runnable.rs  stage.rs  state.rs  time.rs
crates/foxy/src/core/app/: builder.rs
crates/foxy/src/core/input/: key.rs  modifier.rs  mouse.rs  state.rs
crates/foxy/src/window/: create_info.rs
crates/foxy_log/: Cargo.toml  README.md
crates/foxy_log/src/: builder.rs  format.rs  init.rs  level.rs  lib.rs  prelude.rs
crates/foxy_renderer/: Cargo.toml  README.md
crates/foxy_renderer/assets/foxy/shaders/: hdr.wgsl  shader.wgsl  texture.wgsl
crates/foxy_renderer/assets/shaders/: hdr.wgsl  shader.wgsl  texture.wgsl
crates/foxy_renderer/assets/shaders/foxy_renderer/: gradient.comp
crates/foxy_renderer/src/: egui.rs  error.rs  lib.rs  renderer.rs  vulkan.rs
crates/foxy_renderer/src/renderer/: asset_manager.rs  builder.rs  command.rs  context.rs  device.rs  diffuse_texture.rs  hdr_pipeline.rs  instance.rs  material.rs  mesh.rs  message.rs  render_data.rs  render_pass.rs  shader.rs  swapchain.rs  target.rs  texture.rs  vertex.rs
crates/foxy_renderer/src/renderer/render_pass/: simple.rs  tonemap.rs
crates/foxy_renderer/src/vulkan/: builder.rs  deletion_queue.rs  device.rs  error.rs  frame_data.rs  image.rs  instance.rs  pipeline.rs  queue.rs  shader.rs  surface.rs  swapchain.rs  sync_objects.rs  types.rs
crates/foxy_renderer/src/vulkan/pipeline/: config.rs  descriptor.rs  gradient.rs  layout.rs
crates/foxy_renderer/src/vulkan/pipeline/layout/: compute.rs
crates/foxy_renderer/src/vulkan/shader/: set.rs  source.rs  stage.rs  storage.rs
crates/foxy_renderer/src/vulkan/shader/stage/: compute.rs  fragment.rs  geometry.rs  mesh.rs  vertex.rs
crates/foxy_renderer/src/vulkan/swapchain/: buffer.rs  image.rs  image_format.rs  pipeline.rs
crates/foxy_renderer/src/vulkan/swapchain/pipeline/: config.rs
crates/foxy_renderer/src/vulkan/types/: allocated_image.rs  deletion_queue.rs  descriptor.rs  frame_data.rs  queue.rs
crates/foxy_time/: Cargo.toml  README.md
crates/foxy_time/src/: game_loop.rs  lib.rs  prelude.rs  ring_buffer.rs  timer.rs
crates/foxy_types/: Cargo.toml  README.md
crates/foxy_types/src/: handle.rs  lib.rs  prelude.rs  primitives.rs  thread.rs  window.rs
crates/foxy_util/: Cargo.toml  README.md
crates/foxy_util/src/: game_loop.rs  lib.rs  log.rs  prelude.rs  time.rs
crates/foxy_util/src/log/: builder.rs  format.rs  init.rs  prelude.rs
crates/foxy_util/src/time/: game_loop.rs  timer.rs
crates/foxy_utils/: Cargo.toml  README.md
crates/foxy_utils/src/: handle.rs  lib.rs  log.rs  mailbox.rs  time.rs  types.rs
crates/foxy_utils/src/log/: format.rs  prelude.rs
crates/foxy_utils/src/thread/: error.rs  handle.rs
crates/foxy_utils/src/time/: stopwatch.rs
crates/foxy_utils/src/types/: behavior.rs  lib.rs  prelude.rs  primitives.rs  ring_buffer.rs  thread.rs
crates/foxy_vulkan/: Cargo.toml  README.md
crates/foxy_vulkan/src/: buffer.rs  builder.rs  command_buffer.rs  deletion_queue.rs  device.rs  error.rs  image.rs  image_format.rs  instance.rs  lib.rs  pipeline.rs  pipeline_layout.rs  shader.rs  surface.rs  swapchain.rs  sync_objects.rs  vulkan.rs
crates/foxy_vulkan/src/device/: builder.rs
crates/foxy_vulkan/src/pipeline/: builder.rs  config.rs  layout.rs
crates/foxy_vulkan/src/shader/: set.rs  source.rs  stage.rs  storage.rs
crates/foxy_vulkan/src/shader/stage/: mesh.rs  vertex.rs
crates/foxy_vulkan/src/swapchain/: buffer.rs  command_buffer.rs  pipeline.rs
crates/foxy_vulkan/src/swapchain/pipeline/: config.rs  layout.rs
crates/foxy_vulkan/src/vulkan/: builder.rs  device.rs  error.rs  surface.rs
crates/foxy_window/: Cargo.toml  README.md
crates/foxy_window/src/: lib.rs  prelude.rs  window.rs
crates/foxy_window/src/debug/: error.rs
crates/foxy_window/src/window/: builder.rs  input.rs  main_message.rs  message.rs  procs.rs  state.rs  window_loop.rs  window_message.rs
crates/foxy_window/src/window/input/: mouse.rs
crates/messaging/: Cargo.toml  README.md
crates/messaging/src/: lib.rs
crates/ookami/: Cargo.toml
crates/ookami/examples/: simple.rs
crates/ookami/examples/voxel_game/: main.rs  state.rs
crates/ookami/src/: core.rs  main.rs  prelude.rs
crates/ookami/src/core/: app.rs  message.rs  renderer.rs  time.rs
crates/ookami/src/core/app/: builder.rs  lifecycle.rs  state.rs  time.rs
crates/ookami/src/core/renderer/: render_data.rs  resources.rs  vulkan.rs
samples/ookami/: Cargo.toml
samples/ookami/assets/shaders/: gradient.comp
samples/ookami/src/: main.rs
samples/simple/: Cargo.toml
samples/simple/src/: main.rs
samples/voxel_game/: Cargo.toml
samples/voxel_game/src/: main.rs
src/: core.rs  debug.rs  lib.rs  main.rs  prelude.rs
src/core/: app.rs  time.rs
src/core/app/: builder.rs  state.rs  window.rs
src/core/app/window/: message.rs
src/debug/: error.rs  log.rs  validation.rs
