[workspace]
resolver = "2"
members  = ["crates/foxy", "crates/foxy_vulkan", "crates/foxy_window", "crates/foxy_renderer", "crates/foxy_types", "crates/foxy_util", "samples/simple", "samples/voxel_game"]

# Enable a small amount of optimization in debug mode
[profile.dev.package."foxy"]
opt-level = 1

# Enable a small amount of optimization in debug mode
[profile.dev.package."foxy_window"]
opt-level = 1

# Enable a small amount of optimization in debug mode
[profile.dev.package."foxy_vulkan"]
opt-level = 1

# Enable a small amount of optimization in debug mode
[profile.dev.package."foxy_renderer"]
opt-level = 1

# Enable high optimizations for dependencies
[profile.dev.package."*"]
opt-level = 3
