[workspace]
resolver = "2"
members  = ["crates/foxy", "crates/foxy_renderer", "samples/simple", "samples/ookami"]

[workspace.package]
license = "MIT OR Apache-2.0"

[profile.dev.package."foxy"]
opt-level = 0

[profile.dev.package."foxy_renderer"]
opt-level = 0

[profile.dev.package."foxy_utils"]
opt-level = 0

# Enable high optimizations for dependencies
[profile.dev.package."*"]
opt-level = 3
