[package]
name        = "eztracing"
version     = "0.1.0"
edition     = "2021"
authors     = ["Gabriel Lugo <dev.gabriel.lugo@gmail.com>"]
repository  = "https://github.com/GTLugo/foxy"
license     = "MIT OR Apache-2.0"
readme      = "README.md"
description = ""
keywords    = ["logging", "tracing"]
categories  = ["data-structures"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing            = { version = "0.1.40" }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
strum              = { version = "0.25.0", features = ["derive"] }
