[package]
name = "ezwin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1.40"
eztracing = { version = "*", path = "../eztracing"}
thiserror = "1.0.44"
anyhow = "1.0.77"

strum = { version = "0.25.0", features = ["derive"] }
enumflags2 = "0.7.8"
arraydeque = "0.5.1"
messaging = { version = "*", path = "../messaging"}

raw-window-handle = "0.6.0"

[dependencies.windows]
version = "0.52.0"
features = [
  "Win32_Foundation",
  "Win32_Graphics_Dwm",
#   "Win32_Graphics_Direct3D_Fxc",
#   "Win32_Graphics_Direct3D12",
  "Win32_Graphics_Dxgi_Common",
  "Win32_Graphics_Gdi",
  "Win32_Security",
  "Win32_System_Console",
  "Win32_System_LibraryLoader",
  "Win32_System_SystemServices",
#   "Win32_System_Threading",
  "Win32_System_WindowsProgramming",
  "Win32_UI_Shell",
  "Win32_UI_WindowsAndMessaging",
  "Win32_UI_Input_KeyboardAndMouse",
]
