[package]
name        = "foxy"
version     = "0.1.0"
edition     = "2021"
authors     = ["Gabriel Lugo <dev.gabriel.lugo@gmail.com>"]
repository  = "https://github.com/GTLugo/foxy"
license     = "MIT OR Apache-2.0"
readme      = "README.md"
description = "foxy"
keywords    = ["foxy"]
categories  = ["data-structures"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror     = "1.0"
anyhow        = "1.0"
tracing       = "0.1"
tracing-error = "0.2"

strum      = { version = "0.25.0", features = ["derive"] }
enumflags2 = "0.7"
messaging  = "1.0"
quanta     = "0.12"
arraydeque = "0.5"

foxy_types    = { version = "0.2", path = "../foxy_types" }
foxy_util     = { version = "0.2", path = "../foxy_util" }
foxy_window   = { version = "0.1", path = "../foxy_window" }
foxy_renderer = { version = "0.1", path = "../foxy_renderer" }
