[package]
name              = "foxy"
version           = "0.1.0"
edition           = "2021"
authors           = ["Gabriel Lugo <dev.gabriel.lugo@gmail.com>"]
repository        = "https://github.com/GTLugo/foxy"
license.workspace = true
readme            = "README.md"
description       = "foxy"
keywords          = ["foxy"]
categories        = ["data-structures"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror     = "1.0"
tracing       = "0.1"
tracing-error = "0.2"

strum      = { version = "0.26", features = ["derive"] }
enumflags2 = "0.7"
quanta     = "0.12"
crossbeam  = "0.8"

winit         = { version = "0.29", features = ["rwh_05"] }
foxy_utils    = { version = "0.3", path = "../foxy_utils" }
foxy_renderer = { version = "0.1", path = "../foxy_renderer" }
