[package]
name = "foxy_log"
version = "1.0.0"
edition = "2021"
authors = ["Gabriel Lugo <dev.gabriel.lugo@gmail.com>"]
repository = "https://github.com/GTLugo/foxy"
license.workspace = true
readme = "README.md"
description = "Common logging utilities for `foxy`"
keywords = ["foxy"]
categories = ["data-structures", "development-tools", "game-engines"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror          = "1.0"
tracing            = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
