[package]
name              = "foxy_renderer"
version           = "0.1.0"
edition           = "2021"
authors           = ["Gabriel Lugo <dev.gabriel.lugo@gmail.com>"]
repository        = "https://github.com/GTLugo/foxy"
license.workspace = true
readme            = "README.md"
description       = "foxy"
keywords          = ["foxy"]
categories        = ["data-structures"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror     = "1.0"
tracing       = "0.1"
tracing-error = "0.2"

foxy_utils = { version = "0.3", path = "../foxy_utils" }
bytemuck   = { version = "1.13", features = ["derive"] }
byteorder  = "1.5"
itertools  = "0.12"
strum      = { version = "0.26", features = ["derive"] }
enumflags2 = "0.7"

winit             = { version = "0.29", features = ["rwh_05"] }
raw-window-handle = "0.5"
# glutin            = "0.31"
glium    = "0.34"
pollster = "0.3"
