[package]
name              = "foxy_renderer"
version           = "0.1.0"
edition           = "2021"
authors           = ["Gabriel Lugo <dev.gabriel.lugo@gmail.com>"]
repository        = "https://github.com/GTLugo/foxy"
license.workspace = true
readme            = "README.md"
description       = "foxy"
keywords          = ["foxy"]
categories        = ["data-structures"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror     = "1.0"
tracing       = "0.1"

foxy_time  = "1.0"
foxy_log   = "1.0"
foxy_utils = { version = "0.3", path = "../foxy_utils" }

bytemuck   = "1.13"
byteorder  = "1.5"
itertools  = "0.12"
strum      = { version = "0.26", features = ["derive"] }
enumflags2 = "0.7"

ezwin = { version = "2.6", features = ["rwh_05"], default-features = false }
ash-window        = "0.12"
ash               = { version = "0.37", features = ["linked", "debug"] }
shaderc           = "0.8"
vk-mem            = "0.3"
egui              = "0.26"
egui-winit        = "0.26"