[package]
name = "foxy_time"
version = "1.0.1"
edition = "2021"
authors = ["Gabriel Lugo <dev.gabriel.lugo@gmail.com>"]
repository = "https://github.com/GTLugo/foxy"
license.workspace = true
readme = "README.md"
description = "Common time utilities for `foxy`"
keywords = ["foxy"]
categories = ["data-structures", "date-and-time", "game-engines"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0"
tracing = { version = "0.1" }
quanta = "0.12"
