[package]
name        = "foxy_util"
version     = "0.1.0"
edition     = "2021"
authors     = ["Gabriel Lugo <dev.gabriel.lugo@gmail.com>"]
repository  = "https://github.com/GTLugo/foxy"
license     = "MIT OR Apache-2.0"
readme      = "README.md"
description = "foxy"
keywords    = ["foxy"]
categories  = ["data-structures"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror          = "1.0"
anyhow             = "1.0"
tracing            = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

arraydeque = "0.5"
strum      = { version = "0.25", features = ["derive"] }
quanta     = "0.12"
