[package]
name        = "foxy_window"
version     = "0.1.0"
edition     = "2021"
authors     = ["Gabriel Lugo <dev.gabriel.lugo@gmail.com>"]
repository  = "https://github.com/GTLugo/foxy"
license     = "MIT OR Apache-2.0"
readme      = "README.md"
description = "foxy"
keywords    = ["foxy"]
categories  = ["data-structures"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0"
anyhow    = "1.0"
tracing   = "0.1"
strum      = { version = "0.26", features = ["derive"] }
enumflags2 = "0.7"
arraydeque = "0.5"
messaging  = "1.0"

foxy_utils     = { version = "0.1", path = "../foxy_utils" }

raw-window-handle = "0.5.2" # using older version for compatibility with ash

[dependencies.windows]
version = "0.52.0"
features = [
  "Win32_Foundation",
  "Win32_Graphics_Dwm",
  #   "Win32_Graphics_Direct3D_Fxc",
  #   "Win32_Graphics_Direct3D12",
  #   "Win32_Graphics_Dxgi_Common",
  "Win32_Graphics_Gdi",
  #   "Win32_Security",
  #   "Win32_System_Console",
  "Win32_System_LibraryLoader",
  "Win32_System_SystemServices",
  #   "Win32_System_Threading",
  "Win32_System_WindowsProgramming",
  "Win32_UI_Shell",
  "Win32_UI_WindowsAndMessaging",
  "Win32_UI_Input_KeyboardAndMouse",
]
