[package]
name = "messaging"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/GTLugo/ookami/tree/master/crates/messaging"
license = "MIT OR Apache-2.0"
readme = "README.md"
authors = ["Gabriel Lugo <dev.gabriel.lugo@gmail.com>"]
keywords = ["messages", "messaging", "synchronization", "sync"]
categories = ["data-structures"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.44"
