[package]
name = "messaging"
version = "1.0.5"
edition = "2021"
repository = "https://github.com/GTLugo/ookami/tree/master/crates/messaging"
license = "MIT OR Apache-2.0"
readme = "README.md"
description = "A simple two-way messaging crate"
authors = ["Gabriel Lugo <dev.gabriel.lugo@gmail.com>"]
keywords = ["messages", "messaging", "synchronization", "sync"]
categories = ["data-structures"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.44"
