[package]
name    = "ookami"
version = "0.0.1"
edition = "2021"
authors = ["Gabriel Lugo <dev.gabriel.lugo@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing   = "0.1.40"
eztracing = { version = "*", path = "../eztracing" }
thiserror = "1.0.44"
anyhow    = "1.0.77"

bytemuck   = "1.13.1"
strum      = { version = "0.25.0", features = ["derive"] }
enumflags2 = "0.7.8"
arraydeque = "0.5.1"
messaging  = "1.0.6"
quanta     = "0.12.2"

# using older version for compatibility with ash
raw-window-handle = "0.5.2"
ezwin             = { version = "*", path = "../ezwin" }
# glfw = { version = "0.54.0", features = ["log"] }

# glow = "0.13.0"
ash        = { git = "https://github.com/ash-rs/ash.git", features = ["linked", "debug"] }
ash-window = { git = "https://github.com/ash-rs/ash.git" }
