[package]
name        = "simple"
version     = "1.0.0"
edition     = "2021"
authors     = ["Gabriel Lugo <dev.gabriel.lugo@gmail.com>"]
repository  = "https://github.com/GTLugo/foxy"
license     = "MIT OR Apache-2.0"
readme      = "README.md"
description = "Simple sample"
keywords    = ["foxy"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1"
foxy    = { version = "0.1", path = "../../crates/foxy" }
